fix: Do not display sidebar on mobile view

--- a/themes/statusline/assets/sass/components/_sidebar-layout.scss
+++ b/themes/statusline/assets/sass/components/_sidebar-layout.scss
@@ -22,7 +22,7 @@
 			margin: 0;
 			margin-bottom: 1rem;
 
-			&.sidebar {
+			&#sidebar {
 				display: none;
 			}
 		}
